--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,65 @@
 <!DOCTYPE html>
+<style>
+    @media (max-width:767px) {
+
+      .information
+      {
+        border-radius:0px !important
+        }
+
+
+      }
+</style>
+
+                            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+                      <script type="text/javascript">
+
+                    google.charts.load('current', {'packages':['corechart']});
+                    google.charts.setOnLoadCallback(drawChart);
+
+                       function drawChart() {
+                        {#var data = google.visualization.arrayToDataTable([#}
+                        {# ['daytime', 'AQI', {role: 'style'}, 'Average'],#}
+                        {# ['9:00',  31, 'black', 31],#}
+                        {# ['10:00', 75, 'darkred', 75],#}
+                        {# ['11:00', 60, 'yellow', 60],#}
+                        {# ['12:00', 65, 'yellow', 45],#}
+                        {# ['13:00', 40, 'green', 40]#}
+                        {#]);#}
+
+                       var data = google.visualization.arrayToDataTable([
+                         ['daytime', 'AQI', {role: 'style'}, 'Average'],
+                           {% for i in range(40) %}
+                           ['{{ dates[i] }}', {{ levels[i] }}, '{% if levels[i] > 50 %} {{'darkred'}} {% endif %} {% if levels[i] <= 50 %} {{ 'green' }} {% endif %}', {{levels[i]}}],
+                           {% endfor %}
+                        ]);
+
+                        var options = {
+                         title: 'Уровень загрязнения воздуха',
+                         hAxis: {title: 'Время', textStyle: { italic: 'true', fontSize: 12}},
+                         vAxis: {title: 'Air Quality Index', baselineColor: 'black'},
+                         backgroundColor: 'none',
+                         animation: {
+                             duration: 1000,
+                             startup: true,
+                             easing: 'out' },
+
+                         seriesType: 'bars',
+                         series: {1: {type: 'area', color: '#00FA9A', curveType: 'function'}},
+
+                         bar: {groupWidth: '61.8%'},
+                         dataOpacity: 0.8,
+                         legend: 'none',
+
+
+                        };
+
+                        var chart = new google.visualization.ComboChart(document.getElementById('info'));
+                        chart.draw(data, options);
+                       }
+                      </script>
+
+
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -34,13 +95,22 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center">
-            <div class="container d-flex align-items-center flex-column">
+        <header class="masthead bg-primary text-white text-center" style="background-color: {{ bg_color }} !important">
+{#            <div class="container d-flex align-items-center flex-column">#}
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="../static/assets/img/avataaars.svg" alt="..." />
-                <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">VOZDOOH</h1>
-                <p class="masthead-subheading font-weight-light mb-0">Будь в курсе. Ежедневно.</p>
+            <div class="row justify-content-lg-start justify-content-sm-center">
+                <div class="col-4 d-none d-lg-block">
+
+                        <img class="masthead-avatar mb-5" src="../static/assets/img/avataaars.svg" alt="..." />
+                        <!-- Masthead Heading-->
+                        <h1 class="masthead-heading text-uppercase mb-0">VOZDOOH</h1>
+                        <p class="masthead-subheading font-weight-light mb-0">Будь в курсе. Ежедневно.</p>
+                </div>
+
+                <div class="col-lg-7 col-sm-10" id='info' style="color: #008000;
+                                          background-color: white;
+                                          border-radius: 35px;">
+                </div>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -110,6 +180,7 @@
         <div class="copyright py-4 text-center text-white">
             <div class="container"><small>Copyright &copy; Egor Udalov, Sofia Rus</small></div>
         </div>
+
 
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
