--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
 
       }
 </style>
+<script src="http://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
+<script src="http://atuin.ru/js/art/lines.js" type="text/javascript"></script>
 
                             <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
                       <script type="text/javascript">
@@ -18,29 +20,21 @@
                     google.charts.setOnLoadCallback(drawChart);
 
                        function drawChart() {
-                        {#var data = google.visualization.arrayToDataTable([#}
-                        {# ['daytime', 'AQI', {role: 'style'}, 'Average'],#}
-                        {# ['9:00',  31, 'black', 31],#}
-                        {# ['10:00', 75, 'darkred', 75],#}
-                        {# ['11:00', 60, 'yellow', 60],#}
-                        {# ['12:00', 65, 'yellow', 45],#}
-                        {# ['13:00', 40, 'green', 40]#}
-                        {#]);#}
 
-                       var data = google.visualization.arrayToDataTable([
+                       var data1 = google.visualization.arrayToDataTable([
                          ['daytime', 'AQI', {role: 'style'}, 'Average'],
                            {% for i in range(40) %}
                            ['{{ dates[i] }}', {{ levels[i] }}, '{% if levels[i] > 50 %} {{'darkred'}} {% endif %} {% if levels[i] <= 50 %} {{ 'green' }} {% endif %}', {{levels[i]}}],
                            {% endfor %}
                         ]);
 
-                        var options = {
-                         title: 'Уровень загрязнения воздуха',
+                        var options1 = {
+                         title: 'Уровень загрязнения воздуха в этом месяце',
                          hAxis: {title: 'Время', textStyle: { italic: 'true', fontSize: 12}},
                          vAxis: {title: 'Air Quality Index', baselineColor: 'black'},
                          backgroundColor: 'none',
                          animation: {
-                             duration: 1000,
+                             duration: 2000,
                              startup: true,
                              easing: 'out' },
 
@@ -50,12 +44,37 @@
                          bar: {groupWidth: '61.8%'},
                          dataOpacity: 0.8,
                          legend: 'none',
-
-
                         };
 
-                        var chart = new google.visualization.ComboChart(document.getElementById('info'));
-                        chart.draw(data, options);
+                        var options2 = {
+                         title: 'Уровень загрязнения воздуха сегодня',
+                         hAxis: {title: 'Дата', textStyle: { italic: 'true', fontSize: 12}},
+                         vAxis: {title: 'Air Quality Index', baselineColor: 'black', ticks: [5, 10, 20, 30, 40, 50] },
+                         backgroundColor: 'none',
+                         animation: {
+                             duration: 2000,
+                             startup: true,
+                             easing: 'out' },
+
+                         seriesType: 'bars',
+                         series: {1: {type: 'area', color: '#00FA9A', curveType: 'function'}},
+
+                         bar: {groupWidth: '61.8%'},
+                         dataOpacity: 0.8,
+                         legend: 'none',
+                        };
+
+                        var data2 = google.visualization.arrayToDataTable([
+                         ['daytime', 'AQI', {role: 'style'}, 'Average'],
+                           {% for i in range(24) %}
+                           ['{{i}}ч.', {{ levelsDaily[i] }}, '{% if levelsDaily[i] > 50 %} {{'darkred'}} {% endif %} {% if levelsDaily[i] <= 50 %} {{ 'green' }} {% endif %}', {{levelsDaily[i]}}],
+                           {% endfor %}
+                        ]);
+
+                        var chart1 = new google.visualization.ComboChart(document.getElementById('info1'));
+                        chart1.draw(data2, options2);
+                        var chart2 = new google.visualization.ComboChart(document.getElementById('info2'));
+                        chart2.draw(data1, options1);
                        }
                       </script>
 
@@ -95,7 +114,8 @@
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead bg-primary text-white text-center" style="background-color: {{ bg_color }} !important">
+
+        <header class="masthead text-white text-center" style="background-image: url('../static/city1.jpg')">
 {#            <div class="container d-flex align-items-center flex-column">#}
                 <!-- Masthead Avatar Image-->
             <div class="row justify-content-lg-start justify-content-sm-center">
@@ -107,9 +127,26 @@
                         <p class="masthead-subheading font-weight-light mb-0">Будь в курсе. Ежедневно.</p>
                 </div>
 
-                <div class="col-lg-7 col-sm-10" id='info' style="color: #008000;
-                                          background-color: white;
-                                          border-radius: 35px;">
+                <style>
+                    #info1:hover {
+                        background-color: rgba(255,250,250, 1) !important;
+                    }
+                    #info2:hover {
+                        background-color: rgba(255,250,250, 1) !important;
+                    }
+                </style>
+
+                <div class="col-lg-7 col-sm-10" id='info1' style="color: #008000;
+                                          background-color: rgba(255,250,250, 0.85);
+                                          border-radius: 35px;
+                                          transition: all 500ms ease;">
+                </div>
+            </div>
+            <div class="row justify-content-center" style="margin-top: 50px; height: 18em;">
+                <div class="col-lg-10 col-sm-10" id='info2' style="color: #008000;
+                                          background-color: rgba(255,250,250, 0.85);
+                                          border-radius: 35px;
+                                          transition: all 500ms ease;">
                 </div>
             </div>
         </header>
