--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -76,6 +76,33 @@
   }
 }
 
+#info1:hover {
+  background-color: rgba(255,250,250, 1) !important;
+}
+#info2:hover {
+  background-color: rgba(255,250,250, 1) !important;
+}
+
+#info1 {
+  color: #008000;
+  background-color: rgba(255,250,250, 0.85);
+  border-radius: 25px;
+  transition: all 500ms ease;
+}
+
+#info2 {
+  color: #008000;
+  background-color: rgba(255,250,250, 0.85);
+  border-radius: 25px;
+  transition: all 500ms ease;
+}
+
+#info2_minimized {
+  color: #008000;
+  background-color: rgba(255,250,250, 0.85);
+  transition: all 500ms ease;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
