--- a/templates/index.html
+++ b/templates/index.html
@@ -1,83 +1,34 @@
 <!DOCTYPE html>
-<style>
-    @media (max-width:767px) {
 
-      .information
-      {
-        border-radius:0px !important
-        }
-
-
-      }
-</style>
 <script src="http://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
 <script src="http://atuin.ru/js/art/lines.js" type="text/javascript"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script type="text/javascript" src="../static/options.js"></script>
 
-                            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-                      <script type="text/javascript">
-
-                    google.charts.load('current', {'packages':['corechart']});
-                    google.charts.setOnLoadCallback(drawChart);
-
-                       function drawChart() {
-
-                       var data1 = google.visualization.arrayToDataTable([
-                         ['daytime', 'AQI', {role: 'style'}, 'Average'],
-                           {% for i in range(40) %}
-                           ['{% if i%8 == 0 %} {{ dates[40-1-i] }} {% else %} {{ '' }} {% endif %}', {{ levelsDaily[40-1-i] }}, '{% if levelsDaily[40-1-i] >= 100 %} {{'darkred'}} {% endif %} {% if levelsDaily[40-1-i] < 100 and levelsDaily[40-1-i] >= 50 %} {{ 'goldenrod' }} {% endif %} {% if levelsDaily[40-1-i] < 50 %} {{ 'green' }} {% endif %}', {{levelsDaily[40-1-i]}}],
-                           {% endfor %}
-                        ]);
-
-                        var options1 = {
-                         title: 'Уровень загрязнения воздуха на ближайшие 5 дней',
-                         hAxis: {title: 'Дата', textStyle: { italic: 'true', fontSize: 12}},
-                         vAxis: {title: 'Air Quality Index', baselineColor: 'black'},
-                         backgroundColor: 'none',
-                         animation: {
-                             duration: 1000,
-                             startup: true,
-                             easing: 'out' },
-
-                         seriesType: 'bars',
-                         series: {1: {type: 'area', color: '#00FA9A', curveType: 'function'}},
-
-                         bar: {groupWidth: '61.8%'},
-                         dataOpacity: 0.8,
-                         legend: 'none',
-                        };
-
-                        var options2 = {
-                         title: 'Уровень загрязнения воздуха в ближайшие сутки',
-                         hAxis: {title: 'Время', textStyle: { italic: 'true', fontSize: 12}},
-                         vAxis: {title: 'Air Quality Index', baselineColor: 'black'},
-                         backgroundColor: 'none',
-                         animation: {
-                             duration: 1000,
-                             startup: true,
-                             easing: 'out' },
-
-                         seriesType: 'bars',
-                         series: {1: {type: 'area', color: '#00FA9A', curveType: 'function'}},
-
-                         bar: {groupWidth: '61.8%'},
-                         dataOpacity: 0.8,
-                         legend: 'none',
-                        };
-
-                        var data2 = google.visualization.arrayToDataTable([
-                         ['daytime', 'AQI', {role: 'style'}, 'Average'],
-                           {% for i in range(24) %}
-                           ['{{hours[24-1-i]}}', {{ levelsHourly[24-1-i] }}, '{% if levelsHourly[24-1-i] >= 100 %} {{'darkred'}} {% endif %} {% if levelsHourly[24-1-i] < 100 and levelsHourly[24-1-i] >= 50 %} {{ 'goldenrod' }} {% endif %} {% if levelsHourly[24-1-i] < 50 %} {{ 'green' }} {% endif %}', {{levelsHourly[24-1-i]}}],
-                           {% endfor %}
-                        ]);
-
-                        var chart1 = new google.visualization.ComboChart(document.getElementById('info1'));
-                        chart1.draw(data2, options2);
-                        var chart2 = new google.visualization.ComboChart(document.getElementById('info2'));
-                        chart2.draw(data1, options1);
-                       }
-                      </script>
-
+<script type="text/javascript">
+google.charts.load('current', {'packages':['corechart']});
+google.charts.setOnLoadCallback(drawChart);
+function drawChart() {
+    const hourly = google.visualization.arrayToDataTable([
+        ['daytime', 'AQI', {role: 'style'}, 'Average'],
+        {% for i in range(24) %}
+            ['{{hours[24-1-i]}}', {{ levelsHourly[24-1-i] }}, '{% if levelsHourly[24-1-i] >= 100 %} {{'darkred'}} {% endif %} {% if levelsHourly[24-1-i] < 100 and levelsHourly[24-1-i] >= 50 %} {{ 'goldenrod' }} {% endif %} {% if levelsHourly[24-1-i] < 50 %} {{ 'green' }} {% endif %}', {{levelsHourly[24-1-i]}}],
+        {% endfor %}
+    ]);
+    const five_days = google.visualization.arrayToDataTable([
+        ['daytime', 'AQI', {role: 'style'}, 'Average'],
+        {% for i in range(40) %}
+            ['{% if i%8 == 0 %} {{ dates[40-1-i] }} {% else %} {{ '' }} {% endif %}', {{ levelsDaily[40-1-i] }}, '{% if levelsDaily[40-1-i] >= 100 %} {{'darkred'}} {% endif %} {% if levelsDaily[40-1-i] < 100 and levelsDaily[40-1-i] >= 50 %} {{ 'goldenrod' }} {% endif %} {% if levelsDaily[40-1-i] < 50 %} {{ 'green' }} {% endif %}', {{levelsDaily[40-1-i]}}],
+        {% endfor %}
+    ]);
+    const chart_hourly = new google.visualization.ComboChart(document.getElementById('info1'));
+    chart_hourly.draw(hourly, optionsHourly);
+    const chart_five_days = new google.visualization.ComboChart(document.getElementById('info2'));
+    chart_five_days.draw(five_days, optionsFiveDays);
+    const chart_five_days_minimized = new google.visualization.ComboChart(document.getElementById('info2_minimized'));
+    chart_five_days_minimized.draw(five_days, optionsFiveDays);
+}
+</script>
 
 <html lang="en">
     <head>
@@ -86,23 +37,18 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>VOZDOOH</title>
-        <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="../static/assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="../static/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand" href="#page-top">VOZDOOH.INFO</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
+                    Меню
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -113,49 +59,34 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
 
         <header class="masthead text-white text-center" style="background-image: url('../static/city1.jpg')">
-{#            <div class="container d-flex align-items-center flex-column">#}
-                <!-- Masthead Avatar Image-->
             <div class="row justify-content-lg-start justify-content-sm-center">
                 <div class="col-4 d-none d-lg-block">
-
                         <img class="masthead-avatar mb-5" src="../static/assets/img/avataaars.svg" alt="..." />
-                        <!-- Masthead Heading-->
                         <h1 class="masthead-heading text-uppercase mb-0">VOZDOOH</h1>
                         <p class="masthead-subheading font-weight-light mb-0">Будь в курсе. Ежедневно.</p>
                 </div>
+                <div class="col-lg-7 col-sm-10" id='info1'></div> {# hourly forecast #}
+            </div>
 
-                <style>
-                    #info1:hover {
-                        background-color: rgba(255,250,250, 1) !important;
-                    }
-                    #info2:hover {
-                        background-color: rgba(255,250,250, 1) !important;
-                    }
-                </style>
-
-                <div class="col-lg-7 col-sm-10" id='info1' style="color: #008000;
-                                          background-color: rgba(255,250,250, 0.85);
-                                          border-radius: 35px;
-                                          transition: all 500ms ease;">
+            <div class="d-none d-lg-block">
+                <div class="row justify-content-center" style="margin-top: 50px; height: 18em;">
+                    <div class="col-lg-10" id='info2'></div> {# five days forecast large screen #}
                 </div>
             </div>
-            <div class="row justify-content-center" style="margin-top: 50px; height: 18em;">
-                <div class="col-lg-10 col-sm-10" id='info2' style="color: #008000;
-                                          background-color: rgba(255,250,250, 0.85);
-                                          border-radius: 35px;
-                                          transition: all 500ms ease;">
+
+            <div class="d-sm-none">
+                <div class="row justify-content-center" style="margin-top: 50px; height: 50em;">
+                    <div class="col-sm-10" id='info2_minimized'></div> {# small screen #}
                 </div>
             </div>
+
         </header>
-        <!-- Portfolio Section-->
+
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
-                <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Данные</h2>
-
                 <div class="graphs" style="text-align:center;">
                     <img class="img-fluid rounded" src="../static/graphs/graph-2.png" alt="..." />
                     <img class="img-fluid rounded" src="../static/graphs/graph-pollution-wind-speed-2.png" alt="..." />
@@ -163,18 +94,14 @@
                 </div>
             </div>
         </section>
-        <!-- About Section-->
         <section class="page-section bg-primary text-white mb-0" id="about">
             <div class="container">
-                <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">О нас</h2>
-                <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- About Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ms-auto"><p class="lead">Авторы проекта - двое студентов СФУ - Егор Удалов и София Рус. Целью нашего проекта является своевременное оповещение пользователей о грядущем загрязнении воздуха.</p></div>
                     <div class="col-lg-4 me-auto"><p class="lead">Мы непрерывно, в автоматическом режиме собираем данные от различных сервисов, что позволяет отслеживать изменение зависимостей уровня загрязнения воздуха от погодных условий.</p></div>
@@ -182,11 +109,9 @@
             </div>
         </section>
 
-        <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                    <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Мы находимся</h4>
                         <p class="lead mb-0">
@@ -195,17 +120,15 @@
 
                         </p>
                     </div>
-                    <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Мы в интернетике</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>
+                        <h4 class="text-uppercase mb-4">Пообщаемся?</h4>
+                        <p>Telegram:</p>
+                        <p>@arud3nko</p>
+                        <p>@yyyeersshhh</p>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">Достучаться по почте</h4>
+                        <h4 class="text-uppercase mb-4">Можно и по почте</h4>
                         <p class="lead mb-0">
                             edm.rud3nko@yandex.ru
                         </p>
@@ -213,15 +136,11 @@
                 </div>
             </div>
         </footer>
-        <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Egor Udalov, Sofia Rus</small></div>
+            <div class="container"><small>Copyright &copy; Egor Udalov, Sofia Rus | Krasnoyarsk, 2022</small></div>
         </div>
 
-
-        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
         <script src="../static/js/scripts.js"></script>
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
